# nih-plug

./: Cargo.toml
nih_plug_xtask/src/: lib.rs
plugins/examples/futuresdr_egui/: Cargo.toml
plugins/examples/futuresdr_egui/src/: lib.rs  main.rs
